# aws_restart_desafio_192_cf

./: README.md  app.py  pyproject.toml  requirements.txt  template.yml
desafio_192_cf/: desafio_192_cf_stack.py
tests/unit/: test_desafio_192_cf_stack.py
